# hantu

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
hantu_generator_test/: Cargo.toml
hantu_generator_test/src/: main.rs
src/: lib.rs  magic.rs  main.rs
src/libs/errors/src/: lib.rs
src/libs/executor/: Cargo.toml
src/libs/executor/src/: lib.rs
src/libs/magic/: Cargo.toml
src/libs/magic/src/: lib.rs
src/libs/mutation_engine/: Cargo.toml
src/libs/mutation_engine/src/: grammer_caller.rs  lib.rs
src/libs/mutation_engine/src/custom_mutators/grammar_mutator/: Cargo.toml  README.md
src/libs/mutation_engine/src/custom_mutators/grammar_mutator/benches/: README.md  lib.rs
src/libs/mutation_engine/src/custom_mutators/grammar_mutator/grammars/: README.md  avi.json  bash.json  bmp.json  bson.json  bzip2.json  cab.json  cpio.json  css.json  csv.json  dhcp.json  dns.json  ebpf.json  elf.json  eps.json  epub.json  ftp.json  geojson.json  gif.json  gzip.json  html.json  ico.json  ini.json  javascript.json  jpeg2000.json  jpg.json  json.json  jwt.json  lua.json  lzma.json  lzo.json  markdown.json  midi.json  mov.json  mp3.json  mp4.json  msgpack.json  ntp.json  pcap.json  pdf.json  (+23 more)
src/libs/mutation_engine/src/custom_mutators/grammar_mutator/src/: lib.rs
src/libs/mutation_engine/src/custom_mutators/ni/: Cargo.toml
src/libs/mutation_engine/src/custom_mutators/ni/benches/: README.md  lib.rs
src/libs/mutation_engine/src/custom_mutators/ni/src/: lib.rs
src/libs/prng/: Cargo.toml
src/libs/prng/benches/: Cargo.toml  README.md
src/libs/prng/benches/src/: main.rs
src/libs/prng/src/: lehmer.rs  lib.rs  romuduojr.rs  romutrio.rs  seed.rs  shishua.rs  splitmix.rs  wyhash.rs  xorshift.rs  xorshiro128ss.rs  xorshiro256ss.rs
src/libs/test_case/: Cargo.toml
src/libs/test_case/src/: lib.rs
src/libs/utils/: Cargo.toml
src/libs/utils/src/: lib.rs
