[package]
name = "grammar_mutator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", features = ["derive"] }
prng = { path = "../../../../prng" }
serde_json = "1.0.96"
rmp-serde = "1.1.1"
errors = { path = "../../../../errors" }
